--- a/example.html
+++ b/example.html
@@ -13,7 +13,7 @@
 <body>
 
 <h2>Toasty! example</h2>
-<h4>Observe that the click events are delayed with toasted.</h4>
+<h4>Observe that the click events are delayed when toasted.</h4>
 
 <p>Click at any element or the button...</p>
 
