build and fixed example

--- a/example.html
+++ b/example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Toasty!</title>
 
-    <script src="mk/index.js"></script>
+    <script src="dist/index.js"></script>
     <script type="text/javascript">
         MK.toastDocument(.5); //50% chance
 
